...
    return Scaffold(
      primary: false,
      body: NestedScrollView(
        // App bar title that hides when scrolling.
        headerSliverBuilder: (BuildContext context, bool innerBoxIsScrolled) {
          return <Widget>[
            const BarsPageAppBar(barTitleWidget: Text("Your Bars")),
          ];
        },
        body: Consumer2<ApplicationState, UserInfoState>(
          builder: (context, applicationState, userInfoState, _) =>
              (applicationState.loginState == ApplicationLoginState.loggedIn &&
                      userInfoState.userExist)
...
            const SizedBox(width: 10),
            BlurredCircle(
              child: FloatingActionButton(
                heroTag: "saveButton",
                onPressed: () async =>
                    await withLoaderOverlay(() => userInfoState.saveBars()),
                tooltip: 'Save',
                child: const Icon(Icons.save),
              ),
            ),
          ],
        );
      }),
...
