...
                Container(
                  padding: const EdgeInsets.symmetric(vertical: 8),
                  width: double.infinity,
                  child: OutlinedButton(
                    onPressed: () async => await withLoaderOverlay(() =>
                        appState.signInAnonymously(Navigator.of(context))),
                    child: const Text('Skip Login'),
                  ),
                ),
                Container(
                  padding: const EdgeInsets.only(bottom: 8),
                  child: const Text(
                    'If you choose not to log in, you cannot sync data across devices. However, you can still create an account later.',
...
